# cmd-manager

./: .gitignore  CMakeLists.txt  LICENSE  README.md  filerowwidget.cpp  filerowwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc  settingsdialog.cpp  settingsdialog.h  settingsmanager.cpp  settingsmanager.h  terminaldialog.cpp  terminaldialog.h
assets/: resources.qrc
assets/translations/: cmd_manager_es.qm  cmd_manager_es.ts  cmd_manager_fr.qm  cmd_manager_fr.ts  cmd_manager_ru.qm  cmd_manager_ru.ts  cmd_manager_vi.qm  cmd_manager_vi.ts  cmd_manager_zh.qm  cmd_manager_zh.ts
src/: CMakeLists.txt  main.cpp
src/core/: settingsmanager.cpp  settingsmanager.h  utils.cpp  utils.h
src/ui/: filerowwidget.cpp  filerowwidget.h  mainwindow.cpp  mainwindow.h  settingsdialog.cpp  settingsdialog.h
